DAT-447 add ftp test using JSONConnector